-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.1.0 FF
-
None
-
9970ebb277db5f11c8a7e72099fdd056a6d8310c (qt/qtdeclarative/dev) 3908cf16c0c5dab125e53e028babbb9a479f371e (qt/qtdeclarative/6.1)
In contrast to my initial estimate std::variant is still expensive if you don't use exceptions. We need to replace it with a tagged union. As it's public API we have to delay the 6.1 release for it.
For Gerrit Dashboard: QTBUG-91717 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
338335,6 | Replace std::variant with tagged union in QJSPrimitiveValue | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
338695,2 | Replace std::variant with tagged union in QJSPrimitiveValue | 6.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |